# mem-graph-mcp

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  FASTMCP_3_0_COMPLETION_REPORT.md  LAST_SESSION.md  LICENSE  Makefile  README.md  SOUL.md  docker-compose.sandbox.yml  error.md  fix_imports.py  fix_markers.py  logfire.guide.md  main.py  mark_done.py  mark_tools.py  pyproject.toml  pyrefly.toml  pytest.ini  remove_mcp.py
.omp/: settings.json
.pydantic-deep/: config.toml
.pydantic-deep/main/: MEMORY.md
docs/: 001-audit-20260413.md  002-agent-enhancements.md  005-fastmcp-upgrade-plan.md  audit_agent_plan.md  ladybug.md  mem-graph-codemode-openapi-plan.md  plan.md
docs/context/: context_map.md
docs/documentation/: agent.md  api.md  architecture.md  configuration.md  data-models.md  deployment.md  glossary.md  index.md  runbook.md  sandbox.md  security.md  server.md  testing.md  tools.md
docs/reviews/: 000-summary.md  001-root-level-package.md  002-agents-package.md  003-models-package.md  004-services-package.md  005-tools-package.md  006-providers-package.md  007-resources-package.md  008-observability-package.md  (+11 more)
schema/: agent_memory_schema.cypher
scripts/: analyze_scm.py  combine_tree_sitter_queries.py  load_jina_sample_data.py  load_jira_sample_data.py  run_evals.py  validate_agent_statelessness.py  validate_prompt_caching.py  validate_schemas.py
tests/: conftest.py  test_additional_agent_evals.py  test_agent_update.py  test_agent_workflows.py  test_audit.py  test_db.py  test_decision_agent.py  test_diagram_agent.py  test_document_evals.py  test_evals.py  test_filesystem_tools.py  test_filesystem_tree.py  test_fix_evals.py  test_graph.py  test_jina.py  test_jina_embedder.py  test_jira.py  test_jira_embedder.py  test_logfire_setup.py  test_map_agent.py  test_map_evals.py  test_openapi_provider.py  test_parsers.py  test_pydantic_ai_advanced_concepts.py  test_report_writer.py  test_sandbox_config.py  test_sandbox_manager.py  test_sandbox_podman.py  test_sandbox_provider.py  test_sandbox_snapshots.py  test_schema_contracts.py  test_scorers.py  test_server_metadata.py  test_skill_evals.py  test_task_agent.py  test_task_queue.py  test_tools.py  test_triage_agent.py  test_validate_evals.py  test_violation_writer.py  (+4 more)
(+476 files in other folders)
