[project]
name = "memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anyio>=4.3.0",
    "fastmcp[code-mode,apps]>=3.2.3",
    "httpx>=0.28.1",
    "ollama>=0.6.1",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.56.0",
    "pydantic-graph>=0.8.1",
    "python-dotenv>=1.2.2",
    "real-ladybug>=0.15.3",
    "sentence-transformers>=5.4.0",
    "starlette>=0.36.0",
    "uuid-utils>=0.14.1",
    "uvicorn>=0.29.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pyrefly>=0.60.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.10",
]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
explicit_package_bases = true
ignore_missing_imports = true
